--- a/Ej19/.settings/org.eclipse.wst.common.component
+++ b/Ej19/.settings/org.eclipse.wst.common.component
@@ -1,23 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-            
-    
-    <wb-module deploy-name="Ej18-0.0.1-SNAPSHOT">
-                        
-        
+    <wb-module deploy-name="Ej19-0.0.1-SNAPSHOT">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-                        
-        
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                        
-        
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                        
-        
-        <property name="java-output-path" value="/Ej18/build/classes"/>
-        <property name="context-root" value="Ej18"/>
-                    
-    
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
+        <property name="context-root" value="Ej19"/>
+        <property name="java-output-path" value="/Ej19/build/classes"/>
     </wb-module>
-        
-
 </project-modules>
